--- a/index.html
+++ b/index.html
@@ -6,25 +6,62 @@
     <title>Prescription</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="jquery.js"></script>
-    <script src="javasc.js"></script>
 </head>
 <body>
     <div id="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1">Rezept</span>
+            <a class="navbar-brand" href="#">
+                <img src="image.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+                MedEx
+            </a>
             <a class="navbar-brand" href="#" style="color: #50555a">Home</a>
             <a class="navbar-brand" href="#" style="color: #50555a" >About</a>
         </nav> 
 
-        <p class="intro" style=" padding: 1vw; padding-top: 2vw">Have you ever thought that how difficult it would be if we there were no chemist
-        because they are the only one who understands the prescription written by the doctors but dont worry we solved your
-        problem. Here is the solution for it. Your will get the names of medicines written in prescription just by clicking 
-        its pic and uploading it here.</p>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="img1.jpg" alt="First slide" style="height: 35vw; opacity: 0.6;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h4 style="color: black">Have you ever thought that how difficult it would be if we there were no chemist
+                        because they are the only one who understands the prescription written by the doctors.</h4>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img2.jpg" alt="Second slide" style="height: 35vw; opacity: 0.6;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3 style="color: black">But dont worry we have a right solution for your
+                        problem.</h3>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="image.jpeg" alt="Third slide" style="height: 35vw; opacity: 0.6;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3 style="color: black">Get the names of medicines written in prescription just by uploading it here.</h3>
+                  </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          
+        
 
         <form style="padding: 1vw">
             <div class="row 1" style="padding: 1vw">
