--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Prescription</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-    <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </head>
@@ -45,7 +45,7 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="image.jpeg" alt="Third slide" style="height: 35vw; opacity: 0.6;">
+                <img class="d-block w-100" src="img3.jpg" alt="Third slide" style="height: 35vw; opacity: 0.6;">
                 <div class="carousel-caption d-none d-md-block">
                     <h3 style="color: black">Get the names of medicines written in prescription just by uploading it here.</h3>
                   </div>
@@ -59,26 +59,26 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-          </div>
+        </div>
           
         
 
         <form style="padding: 1vw">
             <div class="row 1" style="padding: 1vw">
                 <div class="col 1">
-                    <input type="text" class="form-control" placeholder="First name">
+                    <input type="text" id="Fname" class="form-control" placeholder="First name">
                 </div>
                 <div class="col 2">
-                    <input type="text" class="form-control" placeholder="Last name">
+                    <input type="text" id="Lname" class="form-control" placeholder="Last name">
                 </div>
             </div>
             <div class="row 2" style="padding: 1vw">
                 <div class="col 1">
-                    <input type="text" class="form-control" placeholder="Email ID">
+                    <input type="text" id="email" class="form-control" placeholder="Email ID">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="col 2">
-                    <input type="text" class="form-control" placeholder="Phone No.">
+                    <input type="text" class="form-control" id="phone" placeholder="Phone No.">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your phone no. with anyone else.</small>
                 </div>
             </div>
@@ -86,8 +86,9 @@
                 <label for="prescription">Upload Prescription</label>
                 <input type="file" class="form-control-file" id="prescription">
             </div>
-            <div style="text-align: center"><button type="submit" class="btn btn-primary">Submit</button></div>
         </form>
+        <div style="text-align: center"><button id="btn1" type="submit" class="btn btn-primary">Submit</button></div>
+        <ul class="list"></ul>
     </div>
 </body>
 </html>
